financas-app/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: financas-app
  labels:
    name: financas-app
    istio-injection: enabled
