financas-app/kubernetes/regular-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: financas-app-namespace
  labels:
    name: financas-app-namespace

---
apiVersion: v1
kind: Service
metadata:
  name: api-balance-service
  namespace: financas-app-namespace
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: balance-app
    namespace: financas-app-namespace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-app
  namespace: financas-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: balance-app
      namespace: financas-app-namespace
  template:
    metadata:
      labels:
        app: balance-app
        namespace: financas-app-namespace
    spec:
      containers:
        - name: balance-app
          image: wjcarrer/api-balance-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
